schedule: return only one cloud
Returning a list is confusing. User just needs to know the first item.

Return 404 if no cloud is found.
